[gd_scene load_steps=3 format=3 uid="uid://2orf6cxsfiec"]

[ext_resource type="Script" path="res://Assets/Code/Scripts/dynamic_audio.gd" id="1_7hv3m"]
[ext_resource type="Script" path="res://Assets/GenericAssets/Scenes/BankAudioChannel.gd" id="2_7yaoq"]

[node name="DynamicAudio" type="Node2D"]
script = ExtResource("1_7hv3m")

[node name="BankA" type="Node2D" parent="."]

[node name="BankA1" type="AudioStreamPlayer2D" parent="BankA"]
script = ExtResource("2_7yaoq")

[node name="BankA2" type="AudioStreamPlayer2D" parent="BankA"]
script = ExtResource("2_7yaoq")

[node name="BankA3" type="AudioStreamPlayer2D" parent="BankA"]
script = ExtResource("2_7yaoq")

[node name="BankA4" type="AudioStreamPlayer2D" parent="BankA"]
script = ExtResource("2_7yaoq")

[node name="BankA5" type="AudioStreamPlayer2D" parent="BankA"]
script = ExtResource("2_7yaoq")

[node name="BankA6" type="AudioStreamPlayer2D" parent="BankA"]
script = ExtResource("2_7yaoq")

[node name="BankB" type="Node2D" parent="."]

[node name="BankB1" type="AudioStreamPlayer2D" parent="BankB"]
script = ExtResource("2_7yaoq")

[node name="BankB2" type="AudioStreamPlayer2D" parent="BankB"]
script = ExtResource("2_7yaoq")

[node name="BankB3" type="AudioStreamPlayer2D" parent="BankB"]
script = ExtResource("2_7yaoq")

[node name="BankB4" type="AudioStreamPlayer2D" parent="BankB"]
script = ExtResource("2_7yaoq")

[node name="BankB5" type="AudioStreamPlayer2D" parent="BankB"]
script = ExtResource("2_7yaoq")

[node name="BankB6" type="AudioStreamPlayer2D" parent="BankB"]
script = ExtResource("2_7yaoq")
